# testscribe

./: .coverage  .env.example  .gitignore  AUDIT-testscribe.md  CLAUDE.md  Dockerfile  LICENSE  README.en.md  README.md  demo.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: ADR-001-chromadb-vs-faiss.md  ADR-002-embeddings-choice.md  ADR-003-cvss-lite-scoring.md
src/: __init__.py
src/agents/: __init__.py  compliance_tagger.py  pattern_classifier.py  report_enricher.py  severity_scorer.py
src/api/: app.py
src/core/: embedder.py  orchestrator.py  vector_store.py
src/data/: pattern_library.json  seed_reports.json
src/schemas/: __init__.py  enriched_report.py  raw_report.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_classifier.py  test_compliance.py  test_enricher.py  test_schemas.py  test_scorer.py
