[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "testscribe"
version = "0.1.0"
description = "AI-powered bug report enricher with RAG pattern classification"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "anthropic>=0.28",
    "flask>=3.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
    "allure-pytest>=2.13",
    "flask-testing>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "unit: isolated unit tests",
    "integration: integration tests requiring pipeline",
    "e2e: end-to-end Playwright tests",
    "live_api: tests requiring Anthropic API key (skipped in CI)",
]
